# helixpipe

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  codes.txt  config.yaml  configs.txt  environment.yaml  environment.yml  exploratino_brenda.py  head.json  install_env.sh  pyproject.toml  requirements.txt  setup.py  test.py  utils.txt
analysis/: analyze_sim_distributions.py  compare_graph_strctures.py  d-l_sim_distribution.py  explore_graph_structures.py  split_diff_visualize.py
analysis/scripts/: analyze_graph_structures.py  analyze_similarities.py  analyze_split_effect.py  plot_utils.py  post_process_analysis.py
common_utils/: setup.py
common_utils/src/research_template/: __init__.py  config_loader.py  path_manager.py  reproducibility.py  tracking.py
common_utils/src/research_template_legacy/: __init__.py  graph_utils.py  path_manager.py  tracking.py
conf/: config.yaml  env_core.yaml
conf/analysis/: _base.yaml  plotting_defaults.yaml  sim_distributions.yaml  split_diff.yaml  split_effect.yaml
conf/data/: DrugBank.yaml  bindingdb.yaml  biosnap.yaml  davis.yaml
conf/data_params/: _base.yaml  base.yaml  baseline.yaml  brenda.yaml  colddrug_ligand_1-1_sample-0.1.yaml  dataclass.yaml  exp_cold_start_test.yaml  gtopdb.yaml  gtopdb_enabled.yaml  strict_strong.yaml  strict_strong_0.1_1.0.yaml  test.yaml  test_main_pipeline.yaml  test_thresholds.yaml
conf/data_params/bindingdb/: bindingdb_strict.yaml  default.yaml
conf/data_params/brenda/: default.yaml
conf/data_params/filtering/: strict.yaml  strict_strong.yaml
conf/data_params/gtopdb/: default.yaml
conf/data_params/processor_params/: bindingdb_strict.yaml
conf/data_params/sampling/: colddrug_ligand_1-1_sample-0.1.yaml
conf/data_structure/: DrugBank_legacy.yaml  _base.yaml  base.yaml  bindingdb.yaml  biosnap.yaml  brenda.yaml  dataclass.yaml  gtopdb.yaml  stringdb.yaml
conf/dataset_collection/: _base.yaml  baseline.yaml  brenda_aux.yaml  gtopdb_aux.yaml  gtopdb_brenda_aux.yaml
conf/encoder/: ndls_homo.yaml
conf/experiment/: cv_parallel.yaml  parallel.yaml
conf/params/: bindingdb.yaml  default.yaml
conf/predictor/: _base.yaml  gbdt.yaml  rgcn.yaml
conf/relations/: DPL_no_sim.yaml  DPL_only_dl.yaml  DPL_sim.yaml  DP_no_sim.yaml  DP_sim.yaml  _base.yaml  dataclass.yaml  test_all_true.yaml
conf/storage/: tensorvault.yaml
conf/training/: cold_drug_protagonist_eval.yaml  homo-colddrug.yaml  rgcn-colddrug.yaml  rgcn-random.yaml
conf/validators/: _base.yaml  default.yaml
docs/: bug_audit.md  weekly_plan.md
docs/adr/: 001-record-architecture-decisions.md  004-refactor-data-model.md  005-pipeline-centric.md  006-refactor-pipeline-to-entity-centric-with-idmapper.md  007-selector-based-strategy.md  008-refactor-interaction-managing-with-InteractionStore.md  009-add-selector-executor.md  010-refactor-data-params-namespacing.md
src/: data_proc.py  gtopdb_proc.py  main.py  model.py  project_types.py  run.py  test.py  train.py  utils.py
src/configs/: analysis.py  data_params.py  data_structure.py  global_paths.py  predictors.py  register_schemas.py  relations.py  runtime.py
src/data_processing/: base_processor.py  bindingdb_pipeline.py  bindingdb_processor.py  download_tdc_data.py  gtopdb_pipeline.py  gtopdb_processor.py  log_decorators.py  main_pipeline.py  purifiers.py
src/data_processor/: main_processor.py
src/data_utils/: canonicalizer.py  data_loader_strategy.py  debug_utils.py  downloaders.py  graph_builder.py  id_mapper.py  loaders.py  preparers.py  splitters.py  transforms.py
src/encoders/: het_ndls_hetero_encoder.py  ndls_homo_encoder.py  ndls_homo_utils.py  ndls_utils.py  rgcn_hetero_encoder.py
src/features/: __init__.py  esm_protein_extractor.py  feature_extractors.py  similarity_calculators.py
src/helixlib/: __init__.py  caching.py  config_loader.py  errors.py  path_manager.py  reproducibility.py
src/helixpipe/: data_loader_strategy.py  run.py  typing.py
src/helixpipe/configs/: __init__.py  analysis.py  data_params.py  data_structure.py  dataset_collection.py  knowledge_graph.py  predictor.py  register_schemas.py  relations.py  runtime.py  selectors.py  storage.py  training.py  validators.py
src/helixpipe/data_processing/: __init__.py
src/helixpipe/features/: __init__.py  base_extractor.py  feature_extractors.py  similarity_calculators.py
src/helixpipe/pipelines/: __init__.py  main_pipeline.py
src/helixpipe/training/: __init__.py  data_manager.py
src/helixpipe/utils/: __init__.py  configs_utils.py  debug.py  diagnostics.py  download.py  hydra_setup.py  log.py  log_setup.py  pathing.py  tv_manager.py
src/nasnet/: data_loader_strategy.py  run.py  train.py  typing.py
src/nasnet/configs/: __init__.py  data_params.py  data_structure.py  dataset_collection.py  global_paths.py  knowledge_graph.py  mlflow.py  register_schemas.py  relations.py  selectors.py  training.py
src/nasnet/data_processing/: __init__.py
src/nasnet/features/: __init__.py  base_extractor.py  feature_extractors.py  similarity_calculators.py
src/nasnet/pipelines/: main_pipeline.py
src/nasnet/training/: data_manager.py
src/nasnet/utils/: __init__.py  debug.py  download.py  hydra_setup.py  log.py  pathing.py
src/predictors/: gbdt_predictor.py  rgcn_link_predictor.py
src/research_template/: __init__.py  config_loader.py  errors.py  graph_utils.py  tracking.py
tests/: debug_loader.py  debug_loader_init.py  helper.py  online_validation.py  online_validation_test.py  test_canonicalizers.py  test_data_splitter.py  test_graph_builder.py  test_id_mapper.py  test_id_validator.py  test_main_pipeline.py  test_print_hydra_dict.py  test_processors copy.py  test_processors.py  test_purifiers.py
tests/data_processing/datasets/: test_processors.py
tests/live_api/: test_structure_fetchers_liveness.py  test_structure_provider_liveness.py  test_uniprot_service_liveness.py
tests/pipelines/: test_main_pipeline.py
tests/scripts/: generate_fake_data.py
tests/training/: test_data_manager.py
tests/utils/: debug_loader.py  test_debug_utils.py  test_print_hydra_dict.py
(+95 files in other folders)
